# xrdp-kde

./: .gitignore  CMakeLists.txt  LICENSE  README.md  postinst  postrm  prerm
src/: xrdp-NetworkManager.pkla  xrdp-packagekit.pkla
